--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -23,7 +23,7 @@
         border: 1px solid $border-color;
         background: #f8f9fa;
         border-top: none;
-
+        min-height: $row-height;
     }
     .row-data{
         display: flex;
@@ -52,6 +52,7 @@
         color: #111;
         white-space: nowrap;
         outline: none;
+        min-height: $row-height;
         
         &.selected{
             border: none;
