finish table resize

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -11,10 +11,12 @@
     .row{
         display: flex;
         flex-direction: row;
+        height: $row-height;
         min-height: $row-height;
 
     }
     .row-info{
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -23,7 +25,6 @@
         border: 1px solid $border-color;
         background: #f8f9fa;
         border-top: none;
-        min-height: $row-height;
     }
     .row-data{
         display: flex;
@@ -40,6 +41,7 @@
         border-top: 0;
         border-left: 0;
         height: 100%;
+        position: relative;
     }
     .cell{
         min-width: 40px;
@@ -52,12 +54,43 @@
         color: #111;
         white-space: nowrap;
         outline: none;
-        min-height: $row-height;
         
         &.selected{
             border: none;
-            outline: 2px solid #3c74ff;
+            outline: 2px solid $primary-color;
             z-index: 2;
+        }
+    }
+
+
+    .col-resize,
+    .row-resize {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background: $primary-color;
+        opacity: 0;
+        z-index: 1000;
+        &:hover {
+            opacity: 1 !important;
+            cursor: row-resize;
+        }
+    }
+    .col-resize {
+        top: 0;
+        width:4px;
+
+        &:hover{
+            cursor:col-resize;
+        }
+    }
+    .row-resize {
+        position: absolute;
+        left: 0;
+        height: 4px;
+
+        &:hover{
+            cursor:row-resize;
         }
     }
 }
